OAR CHANGELOG
=============

version 2.2.14:
---------------
  - Kill correctly each taktuk command children in case of a timeout.
  - Fix default admission rules: case unsensitive check for properties used in 
    oarsub
  - oarprint: catching error when no input data is available 
  - oarstat: fix typo when printing the resource list for a advance reservation  
  - Update install doc wrt sudo configuration (SSH_CONNECTION env variable)
  - Database schema: clean up non default resource definition (switch, cpu) 

version 2.2.13:
---------------
  - Fix resource allocation order: sort by state first to allocate available
    resources at first to reservations (2.2.12 regression)
  - Fix ganttchart: display of jobs in the future is back (2.2.12 regression)
  - Fix database initialization files
  - Bug #5692: fix syntax with regard to Perl 5.10 upgrade: replace
    "$#{@{$array}}" by "$#{$array}"
  - Fix the scheduler_priority divergence bug in case of besteffort jobs in 
    error
  - Add a --event option to oarnodes and oarstat to display events recorded for
    a job or node
  - Display reserved resources for a validated waiting reservation with their
    current state given as a hint for their actual state at the start time
  - Fix oarproperty: property names are lowercase, do not list system properties
  - Fix OAR_JOB_PROPERTIES_FILE: do not display system properties
  - Add a new user command: oarprint which allow to pretty print resource 
    properties of a job

version 2.2.12:
---------------
  - Bug #5239: fix the bug if there are spaces into job name or project
  - Fix the bug in Iolib if DEAD_SWITCH_TIME >0
  - Fix a bug in bipbip when calling the cpuset_manager to clean jobs in error
  - Bug #5469: fix the bug with reservations and Dead resources
  - Bug #5535: checks for reservations made at a same time was wrong.
  - New feature: local checks on nodes can be plugged in the oarnodecheck